--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,11 @@ br, table {
 
 #curtainText{
 	display: none;
+	-o-transition: .5s;
+	-ms-transition: .5s;
+	-moz-transition: .5s;
+	-webkit-transition: .5s;
+	transition: .5s;
 	margin-left: 100px;
 	margin-right: 100px;
 	border: solid 2px rgb(128, 128, 128);
