--- a/styles.css
+++ b/styles.css
@@ -119,8 +119,10 @@ table {
 }
 
 footer {
-   	bottom: 20;
-	margin-top: 20;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+   	margin-top: 20;
 	font-size: 10px;
 	text-align: center;
 }
