--- a/styles.css
+++ b/styles.css
@@ -174,13 +174,16 @@ br, table {
 
 #curtainText{
 	display: none;
+	margin-left: 100px;
+	margin-right: 100px;
+	border: solid 2px rgb(128, 128, 128);
+	border-radius: 5px 5px 5px 5px;
+}
+
+#curtain span p{
 	-o-transition: .5s;
 	-ms-transition: .5s;
 	-moz-transition: .5s;
 	-webkit-transition: .5s;
 	transition: .5s;
-	margin-left: 100px;
-	margin-right: 100px;
-	border: solid 2px rgb(128, 128, 128);
-	border-radius: 5px 5px 5px 5px;
 }
