--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html {
 	background-color: rgb(0, 0, 40);
+	position: relative;
 }
 
 #headerImage {
@@ -119,6 +120,7 @@ table {
 }
 
 #bottom {
+	position: absolute;
 	bottom: 0;
 	width: 100%;
    	margin-top: 20;
