--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ table {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-   	margin-top: 20;
+   	margin-top: auto;
 	font-size: 10px;
 	text-align: center;
 }
